# Mind4U

./: LICENSE  README.md
backend/: .gitignore  README.md  api_test.py  app.py  prompt.json  pyproject.toml
frontend/: .env.local  bun.lockb  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/components/: GraphDisplay.tsx  TextInput.tsx  ThemeToggleButton.tsx
frontend/src/styles/: globals.css
