[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Nagi-ovo"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
flask = "^3.0.0"
gunicorn = "^21.2.0"
skills = "^0.3.0"
litellm = "^1.40.16"
python-dotenv = "^0.20.0"
httpx = {extras = ["socks"], version = "^0.27.0"}
flask-cors = "^4.0.1"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
